修改配置文件，新建静态资源文件夹

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,43 +3,54 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-    <display-name>Archetype Created Web Application</display-name>
+    <icon>
+        <small-icon>/WEB-INF/images/timg.jpg</small-icon>
+        <large-icon>/WEB-INF/images/timg.jpg</large-icon>
+    </icon>
+    <display-name>Webapp name</display-name>
+    <description>description</description>
+
+    <!--上下文参数：声明应用范围内的初始化参数。在servlet里面可以通过getServletContext().getInitParameter("context/param")得到。-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/Spring-config.xml</param-value>
+        <param-value>/WEB-INF/application.xml</param-value>
+        <description>description</description>
     </context-param>
 
+    <!--<filter>-->
+        <!--<filter-name>characterEncodingFilter</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>-->
+        <!--<init-param id="filter_parameter">-->
+            <!--<param-name>encoding</param-name>-->
+            <!--<param-value>UTF-8</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>forceEncoding</param-name>-->
+            <!--<param-value>true</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>characterEncodingFilter</filter-name>-->
+        <!--<url-pattern id="url_correspond_by_filter">/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
-    <filter>
-        <filter-name>characterEncodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-        <init-param>
-            <param-name>forceEncoding</param-name>
-            <param-value>true</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>characterEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+
     <servlet>
-        <servlet-name>springMVC-config</servlet-name>
+        <servlet-name>springMVC-servlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!--<jsp-file></jsp-file>-->
         <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/SpringMVC-config.xml</param-value>
+            <param-name>servletConfigLocation</param-name>
+            <param-value>/WEB-INF/SpringMVC-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>springMVC-config</servlet-name>
+        <servlet-name>springMVC-servlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 </web-app>
