--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>6.0.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.24</version>
+        </dependency>
 
     </dependencies>
     <build>
