--- a/pom.xml
+++ b/pom.xml
@@ -71,17 +71,24 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>6.0.5</version>
         </dependency>
-        <!-- jsp Template jar -->
+        <!--freemarker 需要jar包-->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.25-incubating</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.3.6.RELEASE</version>
+        </dependency>
+        <!--alibaba json handle jar-->
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.24</version>
         </dependency>
+        <!-- jsp Template jar -->
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>jstl-api</artifactId>
