整合增加log4j2配置

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,9 @@
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         id="WebApp_ID" version="3.1">
+<!--<web-app>-->
     <!--<icon>-->
         <!--<small-icon>/WEB-INF/images/timg.jpg</small-icon>-->
         <!--<large-icon>/WEB-INF/images/timg.jpg</large-icon>-->
@@ -14,9 +15,17 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/application.xml</param-value>
-        <description>description</description>
     </context-param>
 
+
+    <context-param>
+        <param-name>isLog4jAutoInitializationDisabled</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <!--<context-param>-->
+        <!--<param-name>log4jConfiguration</param-name>-->
+        <!--<param-value>/WEB-INF/log4j2.xml</param-value>-->
+    <!--</context-param>-->
     <!--&lt;!&ndash;声明spring security&ndash;&gt;-->
     <!--<filter>-->
         <!--<filter-name>springSecurityFilterChain</filter-name>-->
@@ -57,6 +66,11 @@
             <!--<param-value>/WEB-INF/SpringMVC-security.xml</param-value>-->
         <!--</init-param>-->
         <load-on-startup>1</load-on-startup>
+        <multipart-config>
+            <location></location>
+            <max-file-size>2097152</max-file-size>
+            <max-request-size>2048</max-request-size>
+        </multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
