--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,28 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <!--log4j2 jar-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-web</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <!-- aspect aop相关jar -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.10</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.mockito</groupId>-->
         <!--<artifactId>mockito-core</artifactId>-->
