--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!--单元测试springmvc需要的jar包-->
+        <!--<dependency>-->
+        <!--<groupId>org.mockito</groupId>-->
+        <!--<artifactId>mockito-core</artifactId>-->
+        <!--<version>1.10.19</version>-->
+        <!--</dependency>-->
         <!-- apache servlet api jar -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -53,6 +59,12 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
             <version>4.2.2.RELEASE</version>
+        </dependency>
+        <!--spring webflow-->
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>2.4.4.RELEASE</version>
         </dependency>
         <!-- mybatis jar -->
         <dependency>
@@ -121,11 +133,6 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.10</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.mockito</groupId>-->
-        <!--<artifactId>mockito-core</artifactId>-->
-        <!--<version>1.10.19</version>-->
-        <!--</dependency>-->
     </dependencies>
     <build>
         <finalName>YoParty</finalName>
@@ -160,8 +167,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
