--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,17 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.10</version>
         </dependency>
+        <!--发送接收数据与json类型转换-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.0.pr1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0.pr1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>YoParty</finalName>
